load("@batfish//skylark:junit.bzl", "junit_tests")
load("@batfish//skylark:pmd_test.bzl", "pmd_test")
load("@rules_java//java:defs.bzl", "java_library")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "batfish_testlib",
    srcs = glob(
        ["**/*.java"],
        exclude = ["**/*Test.java"],
    ),
    deps = [
        "//projects/batfish",
        "//projects/batfish-common-protocol:common",
        "//projects/batfish-common-protocol/src/test/java/org/batfish/datamodel:testlib",
        "//projects/bdd",
        "//projects/symbolic",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_hamcrest_hamcrest",
    ],
)

pmd_test(
    name = "batfish_testlib_pmd",
    lib = ":batfish_testlib",
)

junit_tests(
    name = "batfish_tests",
    size = "medium",
    srcs = glob([
        "**/*Test.java",
    ]),
    resources = [
        "//projects/batfish/src/test/resources",
    ],
    tags = ["cpu:4"],
    deps = [
        ":batfish_testlib",
        "//projects/batfish",
        "//projects/batfish-common-protocol:common",
        "//projects/batfish-common-protocol/src/test:common_testlib",
        "//projects/batfish-common-protocol/src/test/java/org/batfish/common/matchers",
        "//projects/batfish-common-protocol/src/test/java/org/batfish/datamodel:testlib",
        "//projects/batfish-common-protocol/src/test/java/org/batfish/datamodel/matchers",
        "//projects/batfish-common-protocol/src/test/java/org/batfish/datamodel/questions:TestQuestion",
        "//projects/batfish-common-protocol/src/test/java/org/batfish/identifiers",
        "//projects/symbolic",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_guava_guava_testlib",
        "@maven//:commons_io_commons_io",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_hamcrest_hamcrest",
    ],
)
