package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "resources",
    srcs = glob(["**"]),
)

filegroup(
    name = "log4j_config",
    srcs = ["log4j2.properties"],
)

filegroup(
    name = "cisco_aci_resources",
    srcs = glob(["org/batfish/vendor/cisco_aci/**"]),
)
