load("@rules_java//java:java_binary.bzl", "java_binary")

java_binary(
    name = "snapshotBddLeakTests",
    testonly = True,
    srcs = ["SnapshotBddLeakTests.java"],
    main_class = "org.batfish.tools.bdd.SnapshotBddLeakTests",
    deps = [
        "//projects/allinone",
        "//projects/batfish",
        "//projects/batfish:batfish_testlib",
        "//projects/batfish-common-protocol:common",
        "//projects/bdd",
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
    ],
)
